# joinlater

./: .gitignore  DISCREPANCIES  LICENSE  Pipfile  README  README.md  pyproject.toml
joinlater/: __main__.py  crypto.py  eduroamassociate.py  identityproviders.py  networking.py  securew2api.py  securew2config.py  simplehttpcallback.py  usueduroamassociate.py
joinlater/networking/: mediator.py  networking.py  networkmanager.py
specimens/: download-specimens.sh  securew2-pages.txt
src/: config.py  crypto.py  identityproviders.py  securew2api.py  usueduroamassociate.py
tests/: test_securew2config.py
tests/specimens/: extract-config.sh
tests/specimens/public/00457/eduroam/: SecureW2.cloudconfig
tests/specimens/public/03418/WPI_DEVEL_Wireless_Profile/: SecureW2.cloudconfig
tests/specimens/public/03418/WPI_Secure_Wireless_Profile/: SecureW2.cloudconfig
tests/specimens/public/04628/xavierwireless/: SecureW2.cloudconfig
tests/specimens/public/05075/Wireless/: SecureW2.cloudconfig
tests/specimens/public/07540/eduroam/: SecureW2.cloudconfig
tests/specimens/public/08381/Cobb_Secure_Network_TLS/: SecureW2.cloudconfig
tests/specimens/public/08514/eduroam/: SecureW2.cloudconfig
tests/specimens/public/09325/RUWirelessSecure/: SecureW2.cloudconfig
tests/specimens/public/09325/ResNet/: SecureW2.cloudconfig
tests/specimens/public/09325/eduroam/: SecureW2.cloudconfig
tests/specimens/public/09458/BYOD/: SecureW2.cloudconfig
tests/specimens/public/11085/eduroam/: SecureW2.cloudconfig
tests/specimens/public/12117/eduroam/: SecureW2.cloudconfig
(+191 files in other folders)
